--- a/sources/test-pkg/enumext-04.tex
+++ b/sources/test-pkg/enumext-04.tex
@@ -8,8 +8,7 @@
     lang=en-US,
     pdfversion=2.0,
     pdfstandard=ua-2,
-    testphase={phase-III,math,title,table,firstaid},
-    uncompress,
+    tagging=on,
   }
 \documentclass{article}
 \usepackage[top=2cm,bottom=2cm,left=1cm,right=1cm]{geometry}
