--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -593,12 +593,12 @@
                         settowidth, dimeval, dimexpr, IfBooleanTF,footnotehyper, DocumentMetadata, %
                         IfDocumentMetadataTF, RenewDocumentCommand, pt, em, SuspendTagging, ResumeTagging,%
                     },%
-% Other words 2
+% Other words 2 -- use deletekeywords=[2]{ref},
     keywordstyle  = [2]{\color{blue!75}},%
-    keywords      = [2]{usepackage,section,documentclass,input,listparindent,linewidth, emph, textbf,makesavenoteenv, makelabel,%
+    keywords      = [2]{usepackage, section, documentclass, input, listparindent, linewidth, emph, textbf, makesavenoteenv, makelabel,%
                     columnseprule, footnote, footnotemark, footnotetext, raggedcolumns, hspace, parindent, removelastskip, %
-                    subsection, list,endlist,leftmargin, itemindent,bfseries,endminipage, minipage, parskip, raisebox, strut,smash, % ,
-                    labelwidth,labelsep,labelindent,label,ref,topsep,parsep,includegraphics, itemize, description, NewCommandCopy, %
+                    subsection, list, endlist, leftmargin, itemindent,bfseries,endminipage, minipage, parskip, raisebox, strut,smash, % ,
+                    labelwidth, labelsep, labelindent, label, ref, topsep,parsep,includegraphics, itemize, description, NewCommandCopy, %
                     multicolsep,leftmargini,leftmarginii, hfill, small, vspace, par, parbox, value, noindent, makebox, textcolor, %
                     itemindent, labelwidth, leftmarginiii,leftmarginiv,itemindent, itemsep, strutbox, raggedright, cs_new_eq, N, NN,%
                     labelwidth, fbox, addvspace, Alph, alph, arabic, Roman, roman, partopsep, baselineskip, mode_leave_vertical,%
@@ -623,7 +623,7 @@
     keywordstyle  = [6]{\color{optcolor}},%
     keywords      = [6]{save-ans,wrap-ans,save-ref,show-pos,show-ans,columns,list-offset, eunumXi,%
                     nosep,before,after,start, right, item-sym, item-sep, hyperfootnotes, item-star, %
-                    scale,wrap-label,font,first,widest,mini-env,list-indent, no-store, save-key,%
+                    scale,wrap-label,font,first,widest,mini-env,list-indent, no-store, save-key, save-sep, ref,%
                     store-env, print-env, write-out, force-eol, write-env, overwrite, unknown, base-fix,%
                     midsep, wrapper,label-pos,label-sep, layout-sty, layout-sep, layout-top, lang, tagging, %
                     pdfversion, pdfstandard, testphase, alt, mark-sep, wrap-ans*, mark-ans, mark-sep},%
@@ -697,6 +697,7 @@
     language    = enumext-doc,%
     upquote     = true,%
     numbersep   = 1em,%
+    deletekeywords = [2]{ref},
     escapechar  =`,%
     basicstyle  =\ttfamily,%\small
     numberstyle = \tiny\color{lightgray}\noaccsupp,%
@@ -1045,7 +1046,7 @@
 %
 % \smallskip
 %
-% \begin{enumext}[save-ans=mytest,columns=2,nosep,save-ref=true,save-sep={ }]
+% \begin{enumext}[save-ans=mytest,columns=2,nosep,save-ref=true,save-sep={\space}]
 %   \item First type of questions
 %      \begin{keyans}[columns=2,noitemsep]
 %        \item value
@@ -2928,8 +2929,8 @@
 % execution}} unless |\item| or |\item*| open a nested level
 % or use the \mykey{no-store} key.
 %
-% The \myenv*{anskey*} environment is implemented using the new 
-% \emph{\enquote{collect code}} \texttt{c-type} argument 
+% The \myenv*{anskey*} environment is implemented using the new
+% \emph{\enquote{collect code}} \texttt{c-type} argument
 % part of \hologo{LaTeX} release 2025-06-01\cite{ltnews}.
 % |\begin{anskey*}| and |\end{anskey*}| must be in different lines and
 % should not appear within verbatim environments or commands. All \mymeta{keys}
@@ -5496,13 +5497,18 @@ Some text here
 % \begin{description}[font=\small\sffamily,wide=0pt,style=multiline,leftmargin=1.1\descrwidth,nosep,noitemsep]
 %  \item [\fileversion{} (ctan), \filedate]
 %    \begin{itemize}
+%      \item Improved implementation of the \texttt{\textcolor{optcolor}{ref}} key.
+%      \item Fixed the behavior of the |save-sep| key.
+%    \end{itemize}
+%  \item [v1.3 (ctan), 2025-06-01]
+%    \begin{itemize}
 %      \item Removed dependency on the \mypkg{scontents} package.
 %      \item The |anskey*| environment has been rewritten using the new
 %            \texttt{c-type} argument.
 %    \end{itemize}
 %  \item [v1.2 (ctan), 2025-03-28]
 %    \begin{itemize}
-%      \item Replace signature (prevent expansion for optional arg).
+%      \item Replace signature (prevent expansion for optional argument).
 %      \item Solve Inconsistent local/global assignment.
 %    \end{itemize}
 %  \item [v1.1 (ctan), 2024-11-14]
@@ -5613,7 +5619,7 @@ Some text here
 %    \end{macrocode}
 % Now declare the \mypkg*{enumext} package.
 %    \begin{macrocode}
-\ProvidesExplPackage {enumext} {2025-06-01} {1.3} {Enumerate exercise sheets}
+\ProvidesExplPackage {enumext} {2025-06-15} {1.4} {Enumerate exercise sheets}
 %    \end{macrocode}
 % Finally check if the \mypkg{multicol} package are loaded, if not we load it.
 %    \begin{macrocode}
@@ -5705,21 +5711,19 @@ Some text here
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\c_@@_counter_style_tl, \l_@@_ref_key_arg_tl,
+% \begin{variable}[int]{\l_@@_ref_key_arg_tl,
 %                       \l_@@_ref_the_count_tl, \l_@@_the_counter_X_tl,
-%                       \l_@@_renew_the_count_X_tl, }
+%                       \l_@@_renew_counter_X_tl, }
 %   Internal variables used by \mykey{ref} key (\S\ref{key:label-ref}).
 % \iffalse
 %% Variables used by |ref| key.
 % \fi
 %    \begin{macrocode}
-\tl_const:Nn \c_@@_counter_style_tl
-  { { arabic } { roman } { Roman } { alph } { Alph } }
 \tl_new:N \l_@@_ref_key_arg_tl
 \tl_new:N \l_@@_ref_the_count_tl
 \cs_set_protected:Npn \@@_tmp:n #1
   {
-    \tl_new:c  { l_@@_renew_the_count_#1_tl }
+    \tl_new:c  { l_@@_renew_counter_#1_tl }
     \tl_new:c  { l_@@_the_counter_#1_tl }
     \tl_set:ce { l_@@_the_counter_#1_tl } { \exp_not:c { theenumX#1 } }
   }
@@ -6622,7 +6626,7 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_after_hyperref:
   {
-    \IfPackageLoadedTF { hyperref }
+    \IfPackageLoadedT { hyperref }
       {
         \msg_info:nnn { enumext } { package-load } { hyperref }
         \bool_set_true:N \l_@@_hyperref_bool
@@ -6632,7 +6636,6 @@ Some text here
           }
           {  }
       }
-      {  }
 %    \end{macrocode}
 %   If the state of the variable \cs{l_@@_footnotes_key_bool} is true we
 %   will check if the package \mypkg{footnotehyper} is loaded, in case it
@@ -7170,7 +7173,7 @@ Some text here
         align / unknown .code:n =
                           \msg_error:nneee { enumext } { unknown-choice }
                             { align } { left,~right,~ center } { \exp_not:n {##1} },
-        align .initial:n  = left,
+        align .initial:n = left,
         align .value_required:n  = true,
       }
   }
@@ -7250,7 +7253,7 @@ Some text here
 %   and we will execute the function \cs{@@_regex_counter_style:} which
 %   will return the modified \cs{l_@@_ref_key_arg_tl} and we make the
 %   value of \cs{l_@@_ref_the_count_tl} the same as that \myvarenv{l__@@_the_counter_X_tl}
-%   which contains |\theenumX| and finally we set \myvarenv{l__@@_renew_the_count_X_tl}
+%   which contains |\theenumX| and finally we set \myvarenv{l__@@_renew_counter_X_tl}
 %   with the renewed command.
 % \iffalse
 %% Internal function used by |ref| key in enumext environment.
@@ -7264,14 +7267,14 @@ Some text here
         \msg_error:nnn { enumext } { key-ref-empty } { enumext }
       }
       {
-        \tl_set_eq:Nc
-          \l_@@_ref_the_count_tl { l_@@_counter_ \@@_level: _tl }
-        \@@_regex_counter_style:
-        \tl_set_eq:Nc
-          \l_@@_ref_the_count_tl { l_@@_the_counter_ \@@_level: _tl }
-        \tl_put_right:ce { l_@@_renew_the_count_ \@@_level: _tl }
+        \tl_set_eq:Nc \l_@@_ref_the_count_tl
           {
-            \exp_not:N \renewcommand { \exp_not:V \l_@@_ref_the_count_tl } { \exp_not:V \l_@@_ref_key_arg_tl }
+            l_@@_the_counter_ \@@_level: _tl
+          }
+        \tl_set:ce { l_@@_renew_counter_ \@@_level: _tl }
+          {
+            \exp_not:N \renewcommand { \exp_not:V \l_@@_ref_the_count_tl }
+              { \exp_not:V \l_@@_ref_key_arg_tl }
           }
       }
   }
@@ -7285,9 +7288,9 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_standar_ref:
   {
-    \tl_if_empty:cF { l_@@_renew_the_count_ \@@_level: _tl }
+    \tl_if_empty:cF { l_@@_renew_counter_ \@@_level: _tl }
       {
-        \tl_use:c { l_@@_renew_the_count_ \@@_level: _tl }
+        \tl_use:c { l_@@_renew_counter_ \@@_level: _tl }
       }
   }
 %    \end{macrocode}
@@ -7341,10 +7344,8 @@ Some text here
             \msg_error:nnn { enumext } { key-ref-empty } { enumext* }
           }
           {
-            \tl_set_eq:NN \l_@@_ref_the_count_tl \l_@@_counter_vii_tl
-            \@@_regex_counter_style:
             \tl_set_eq:NN \l_@@_ref_the_count_tl \l_@@_the_counter_vii_tl
-            \tl_put_right:Ne \l_@@_renew_the_count_vii_tl
+            \tl_set:Ne \l_@@_renew_counter_vii_tl
               {
                 \exp_not:N \renewcommand { \exp_not:V \l_@@_ref_the_count_tl } { \exp_not:V \l_@@_ref_key_arg_tl }
               }
@@ -7357,10 +7358,8 @@ Some text here
             \msg_error:nnn { enumext } { key-ref-empty } { keyans* }
           }
           {
-            \tl_set_eq:NN \l_@@_ref_the_count_tl \l_@@_counter_viii_tl
-            \@@_regex_counter_style:
             \tl_set_eq:NN \l_@@_ref_the_count_tl \l_@@_the_counter_viii_tl
-            \tl_put_right:Ne \l_@@_renew_the_count_viii_tl
+            \tl_set:Ne \l_@@_renew_counter_viii_tl
               {
                 \exp_not:N \renewcommand  { \exp_not:V \l_@@_ref_the_count_tl } { \exp_not:V \l_@@_ref_key_arg_tl }
               }
@@ -7379,16 +7378,16 @@ Some text here
   {
     \int_compare:nNnT { \l_@@_level_h_int } = { 1 }
       {
-        \tl_if_empty:NF \l_@@_renew_the_count_vii_tl
+        \tl_if_empty:NF \l_@@_renew_counter_vii_tl
           {
-            \tl_use:N \l_@@_renew_the_count_vii_tl
+            \tl_use:N \l_@@_renew_counter_vii_tl
           }
       }
     \int_compare:nNnT { \l_@@_keyans_level_h_int } = { 1 }
       {
-        \tl_if_empty:NF \l_@@_renew_the_count_viii_tl
+        \tl_if_empty:NF \l_@@_renew_counter_viii_tl
           {
-            \tl_use:N \l_@@_renew_the_count_viii_tl
+            \tl_use:N \l_@@_renew_counter_viii_tl
           }
       }
   }
@@ -7442,10 +7441,8 @@ Some text here
         \msg_error:nnn { enumext } { key-ref-empty } { keyans }
       }
       {
-        \tl_set_eq:NN \l_@@_ref_the_count_tl \l_@@_counter_v_tl
-        \@@_regex_counter_style:
         \tl_set_eq:NN \l_@@_ref_the_count_tl \l_@@_the_counter_v_tl
-        \tl_put_right:Ne \l_@@_renew_the_count_v_tl
+        \tl_put_right:Ne \l_@@_renew_counter_v_tl
           {
             \exp_not:N \renewcommand { \exp_not:V \l_@@_ref_the_count_tl } { \exp_not:V \l_@@_ref_key_arg_tl }
           }
@@ -7461,9 +7458,9 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_keyans_ref:
   {
-    \tl_if_empty:NF \l_@@_renew_the_count_v_tl
+    \tl_if_empty:NF \l_@@_renew_counter_v_tl
       {
-        \tl_use:N \l_@@_renew_the_count_v_tl
+        \tl_use:N \l_@@_renew_counter_v_tl
       }
   }
 %    \end{macrocode}
@@ -8390,7 +8387,7 @@ Some text here
 % questionable}}, but hunting the spaces (|glue|) produced by the \myenv{minipage}
 % environment is quite complicated, even more if \myenv{multicols} it is nested.
 % The setting of the values was more \emph{\enquote{trial and error}}
-% (aprox to |\strutbox|), using the help of the \mypkg{lua-visual-debug}\cite{luavisual}
+% (approx to |\strutbox|), using the help of the \mypkg{lua-visual-debug}\cite{luavisual}
 % package, again my attempts to find the correct values using |\showoutput| and
 % |\showboxdepth| absolutely failed.
 % \end{important}
@@ -10020,7 +10017,7 @@ Some text here
 %
 % \subsection{Keys and functions associated with storage}\label{int:storage-system}
 %
-% \subsubsection{Keys for \texttt{marks}, \texttt{wrapp} and \texttt{show}}
+% \subsubsection{Keys for \texttt{marks}, \texttt{wrap} and \texttt{show}}
 %
 % The \mypkg*{enumext} package provides a set of \mymeta{keys} for
 % manipulating \emph{\enquote{symbol marks}} associated with \emph{\enquote{answers}}
@@ -11288,10 +11285,7 @@ Some text here
       {
         \tl_if_empty:NF \l_@@_store_keyans_item_opt_sep_v_tl
           {
-            \tl_put_right:Nn \l_@@_store_current_label_tl
-              {
-                \l_@@_store_keyans_item_opt_sep_v_tl
-              }
+            \tl_put_right:NV \l_@@_store_current_label_tl \l_@@_store_keyans_item_opt_sep_v_tl
           }
         \tl_put_right:Nn \l_@@_store_current_label_tl { #1 }
       }
@@ -11417,7 +11411,7 @@ Some text here
       {
         \tl_if_empty:NF \l_@@_store_keyans_item_opt_sep_v_tl
           {
-            \tl_put_right:Nn \l_@@_store_current_label_tl { \l_@@_store_keyans_item_opt_sep_v_tl }
+            \tl_put_right:NV \l_@@_store_current_label_tl \l_@@_store_keyans_item_opt_sep_v_tl
           }
         \tl_put_right:Nn \l_@@_store_current_label_tl { #1 }
       }
